--- a/assets/html/dashboard.html
+++ b/assets/html/dashboard.html
@@ -83,6 +83,7 @@
            <center> 
             <a href="/assets/html/search.html"><button class="button">Search</button></a>&nbsp;&nbsp;&nbsp;
             <a href=" " target="_blank"><button class="button">Infamy Studios</button></a>&nbsp;&nbsp;&nbsp;
+            <a href=" " target="_blank"><button class="button">About us</button></a>&nbsp;&nbsp;&nbsp;
             <a href="https://infamyy.vercel.app/" target="_blank"><button class="button">About me</button></a>&nbsp;&nbsp;&nbsp;
            </center>
        <br>
@@ -92,6 +93,7 @@
         <a href="/assets/html/faq.html"><button class="button">FAQ</button></a>&nbsp;&nbsp;&nbsp;
         <a href="/assets/html/suggestions.html"><button class="button">Suggestions</button></a>&nbsp;&nbsp;&nbsp;
         <a href="/assets/html/reportbugs.html"><button class="button">Report Bugs</button></a>&nbsp;&nbsp;&nbsp;
+        <a href="/assets/html/dmca.html"><button class="button">DMCA</button></a>&nbsp;&nbsp;&nbsp;
        </center>
      <br>
      <br>
