--- a/assets/html/terms.html
+++ b/assets/html/terms.html
@@ -67,17 +67,17 @@
             <center><h1 class="text">Terms</h1></center>
             <h3>
                 1. General Information<br>
-                Starlight provides a variety of services, including a free web proxy, games, utility applications, hacks, and a movie section featuring third-party advertisements. By using our site, you acknowledge that you understand the nature of these services and agree to use them responsibly.<br>
+                Starlight provides a variety of services, including a free web proxy, games, utility applications, hacks, and a movie section featuring third-party advertisements. By using our site, you acknowledge that you understand the nature of these services and agree to use them responsibly.<br><br>
                 2. Age Requirement<br>
-                Users must be 13 years of age or older to access and use Starlight. Our platform includes games and a chatting system that may contain content inappropriate for individuals under the age of 13. By using our site, you confirm that you meet this age requirement.<br>
+                Users must be 13 years of age or older to access and use Starlight. Our platform includes games and a chatting system that may contain content inappropriate for individuals under the age of 13. By using our site, you confirm that you meet this age requirement.<br><br>
                 3. User-Generated Ads<br>
-                Our site utilizes Google Tag Manager and displays user-generated ads. While we strive to ensure that all advertisements are appropriate, we cannot guarantee the content of these ads. Users are encouraged to exercise caution and discretion when interacting with any advertisements or external links.<br>
+                Our site utilizes Google Tag Manager and displays user-generated ads. While we strive to ensure that all advertisements are appropriate, we cannot guarantee the content of these ads. Users are encouraged to exercise caution and discretion when interacting with any advertisements or external links.<br><br>
                 4. Movies Section Warning<br>
-                The movie section of Starlight contains advertisements from third parties. We advise users to be cautious while browsing this section, as we do not control the content or safety of these ads. Starlight is not responsible for any issues that may arise from interacting with third-party advertisements.<br>
+                The movie section of Starlight contains advertisements from third parties. We advise users to be cautious while browsing this section, as we do not control the content or safety of these ads. Starlight is not responsible for any issues that may arise from interacting with third-party advertisements.<br><br>
                 5. User Responsibility<br>
-                By using Starlight, you agree to take full responsibility for your actions while using our services. You will not hold Starlight liable for any direct or indirect damages resulting from your use of the website or its content.<br>
+                By using Starlight, you agree to take full responsibility for your actions while using our services. You will not hold Starlight liable for any direct or indirect damages resulting from your use of the website or its content.<br><br>
                 6. Changes to Terms<br>
-                Starlight reserves the right to modify these terms and conditions at any time. It is your responsibility to review these terms periodically. Any changes will be effective immediately upon posting on our site. Continued use of the site after changes indicates your acceptance of the new terms.<br>
+                Starlight reserves the right to modify these terms and conditions at any time. It is your responsibility to review these terms periodically. Any changes will be effective immediately upon posting on our site. Continued use of the site after changes indicates your acceptance of the new terms.<br><br>
                 7. Contact Information<br>
                 For any questions or concerns about these terms and conditions, please contact us through our website.<br></h3>
             <br>
