--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -51,14 +51,14 @@
 <script>eruda.init();</script>
 <div id="particles-js"></div>
         <nav>
-            <a href="/assets/html/index.html" class="left-link">Starlight</a>
+            <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight</a>
             <div class="nav-links">
-                <a href="/assets/html/arcade.html"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
-                <a href="/assets/html/utilities.html"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
-                <a href="/assets/html/media.html"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
-                <a href="/assets/html/ai.html"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
-                <a href="/assets/html/search.html"><img src="/assets/images/navicons/search.png" id="nav-img">&nbsp;Search</a>
-                <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" id="nav-img">&nbsp;Settings</a>
+                <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
+                <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
+                <a href="/assets/html/media.html" title="Media"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
+                <a href="/assets/html/ai.html" title="AI"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
+                <a href="/assets/html/search.html" title="Search"><img src="/assets/images/navicons/search.png" id="nav-img">&nbsp;Search</a>
+                <a href="/assets/html/settings.html" title="Settings"><img src="/assets/images/navicons/settings.png" id="nav-img">&nbsp;Settings</a>
             </div>
         </nav>
         <div id="mainmenu">
