--- a/assets/html/policy.html
+++ b/assets/html/policy.html
@@ -72,22 +72,22 @@
             IP Address: Starlight uses Google Tag Manager, which may collect your IP address as part of its functionality. This information helps us understand website traffic and improve our services.
             Usage Data: Information about how you use our website, including your browser type, operating system, pages visited, and time spent on each page.
             Please note that Starlight does not collect any personal information directly. Any personal information may only be collected through third-party services.
-         <br>   2. Use of Information<br>
+         <br><br>   2. Use of Information<br>
             We may use the information we collect for the following purposes:
             To provide, maintain, and improve our services.
             To monitor and analyze usage and trends to enhance user experience.
             To communicate with you regarding updates, promotions, and other news related to Starlight (if you have opted in).
-           <br> 3. Cookies<br>
+           <br><br>3. Cookies<br>
             Starlight uses cookies and similar technologies to enhance your experience on our site. Cookies are small data files stored on your device that help us recognize you and remember your preferences. You can control cookie settings through your browser.
-       <br>     4. Third-Party Services<br>
+       <br> <br>    4. Third-Party Services<br>
             Our website may contain links to third-party websites and advertisements. We do not control these third-party services and are not responsible for their content or privacy policies. We encourage you to review their privacy practices before providing any personal information.
-       <br>     5. Data Security<br>
+       <br> <br>    5. Data Security<br>
             We take reasonable measures to protect your information from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the internet or electronic storage is 100% secure, and we cannot guarantee absolute security.
-         <br>   6. Children's Privacy<br>
+         <br> <br>  6. Children's Privacy<br>
             Starlight is intended for users 13 years of age or older. We do collect certain information through Google Tag Manager and third-party services. If you are a parent or guardian and believe that your child under the age of 13 has provided us with personal information, please contact us. Additionally, any inquiries regarding the information collected through Google Tag Manager or third-party services should be directed to those entities.
-        <br>    7. Changes to This Privacy Policy<br>
+        <br>  <br>  7. Changes to This Privacy Policy<br>
             Starlight reserves the right to modify this Privacy Policy at any time. It is your responsibility to review this policy periodically. Changes will be effective immediately upon posting on our site. Your continued use of the site after changes indicates your acceptance of the new policy.
-          <br>  8. Contact Information<br>
+          <br> <br> 8. Contact Information<br>
             If you have any questions or concerns about this Privacy Policy, please contact us through our website.</h3>
             </div>
             <div>
