--- a/assets/misc/apps/equinox.html
+++ b/assets/misc/apps/equinox.html
@@ -21,6 +21,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1">
          <link rel="manifest" href="/assets/json/manifest.json">
          <link rel="stylesheet" href="/assets/css/index.css">
+         <link rel="stylesheet" href="/assets/css/game.css">
          <script src="/assets/js/index.js"></script>
          <script src="/assets/js/serviceworker.js"></script>
          <meta property="og:title" content="Starlight">
@@ -43,127 +44,6 @@
 
   gtag('config', 'G-36EM66LHER');
 </script>
-<style>
-      .share-container {
-            position: relative;
-        }
-        .notification {
-            display: none;
-            position: absolute;
-            bottom: 80px; /* Adjusted for better visibility */
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #333;
-            color: white;
-            padding: 30px;
-            border-radius: 5px;
-            width: 300px; /* Set a fixed width for the notification */
-            text-align: center;
-            opacity: 0; /* Start hidden */
-            transition: opacity 0.5s ease; /* Smooth transition for fade */
-        }
-        .notification.show {
-            display: block; /* Show when needed */
-            opacity: 1; /* Fully visible */
-        }
-        .copy-button {
-            margin-left: 10px;
-            padding: 5px 10px;
-            background-color: #777777;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-     .container-iframe {
-       width:100%;
-   margin-left: 2vw;
-    max-width: 58.688vw;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 0;
-      padding: 80px;
-  }
-  
-  .iframe-container {
-      border-top-left-radius: 15px;
-      border-top-right-radius: 15px;
-      width: 65vw;
-      height: 70vh;
-      overflow: hidden;
-  }
-  
-  iframe {
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-      border: none;
-  }
-  
-  .controls {
-  gap:0.1px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      width: 65vw;
-      height: 5vh;
-      background-color: #121212;
-      border-bottom-left-radius: 15px;
-      border-bottom-right-radius: 15px;
-  }
-    
-  .ad {
-  width: 18vw; /* Adjust width as needed */
-  height: 35vw; /* Adjust height as needed */
-  background-color: #202020;
-  border-radius: 0.5vw;
-  position: relative;
-  box-shadow: 0 0.313vw 0.625vw 0 rgba(30, 30, 30);
-  outline: 0.1vw solid #333;
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  margin-left: 90.917vw;
-  margin-top: -37.854vw;
-  }
-    .adTXT{
-    font-weight:700;
-   color: rgb(124, 124, 124);
-    font-family:sans-serif;
-    }
-    .icon {
-    padding-bottom:20px;
-    padding:10px;
-        color: lightgrey;
-      margin-right: 15px;
-      cursor: pointer;
-      font-size: 18px;
-      transition: color 0.3s;
-  }
-  
-  .icon:hover {
-      color: #ccc;
-  }
-    
-    .desc {
-    font-weight:700;
-    color: lightgrey;
-    font-family:sans-serif;
-  width: 62.5vw; /* Adjust width as needed */
-  background-color: #202020;
-  border-radius: 0.5vw;
-  box-shadow: 0 0.313vw 0.625vw 0 rgba(30, 30, 30, 0.5);
-  outline: 0.1vw solid #333;
-  padding: 1.042vw; /* Padding inside the container */
-  margin-left: 15.625vw;
-  margin-top: 5.208vw;
-  }
-  
-  
-</style>
     </head>
     <body>
    
