--- a/assets/misc/movies/movies.html
+++ b/assets/misc/movies/movies.html
@@ -70,7 +70,7 @@
   
   <div class="container-iframe">
     <div class="iframe-container">
-        <iframe id="iframe" name="iframe" src=""></iframe>
+        <iframe id="iframe" name="iframe" src="/404.html" class="iframe"></iframe>
     </div>
 
     <div class="controls">
