--- a/assets/misc/movies/movies.html
+++ b/assets/misc/movies/movies.html
@@ -97,11 +97,11 @@
 
 <div class="desc">
     <h2 class="desc-title">Title</h2>
-    <p>Unknown</p>
+    <p class="desc-titl">Unknown</p>
       <h2 class="desc-desc">Description</h2>
-    <p>Unknown</p>
+    <p class="desc-des">Unknown</p>
       <h2 class="desc-creator">Creator</h2>
-      <p>Unknown<p>
+      <p class="desc-creato">Unknown<p>
       <h2>Keybinds</h2>
       <p>W,A,S,D, Custom Keys, Arrow keys</p>
       <h2>Devices</h2>
