--- a/assets/html/dmca.html
+++ b/assets/html/dmca.html
@@ -15,7 +15,7 @@
          <meta charset="UTF-8">
          <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy, games unblocked, youtube unblocked, tiktok unblocked, youtube, tiktok, how to play unblocked games at school, games, online games, fortnite games unblocked, nowgg unblocked, nowgg alt links, nowgg, geforce now unblocked, geforcenow, geforce unblocked, geforcenow unblocked, geforce unblocked, play games, unblocked games for school, Unblocked, Games, Proxy, News, Source, Unblocking, Access, Online, Security, VPN, Browsing, Free, Play, Internet, Tools, Speed, Stream, Services, Websites, Anonymous, Privacy, Download, Connect, Network, Game List, Educational, Safe, Explore, Entertainment, Platform, User-Friendly, Experience, Content, Support, Community, Features, Compatibility, Fast, Reliable, Bypass, Filters, Restrictions, Mobile, Desktop, Gaming Hub, Reviews, Ratings, Updates, Tutorials, Guides, Forum, Discussion, Tips, Tricks, Resources, Insights, Feedback, Events, Contests, Challenges, Multiplayer, Strategy, Adventure, Simulation, Action, Casual, Puzzle, Platformer, Arcade, Retro, New Releases, Downloads, User Reviews, Popular, Trending, Favorites, Highlights, Recommendations, Profiles, Achievements, Leaderboards, Quests, Cooperative, Solo, Community Events, Playlists, Scoring, Game Development, Live Events, Streaming, Collaborations, Game Modes, Beta Testing, Special Offers, Promotions, Discounts.">
          <meta name="author" content="Enterheadlines">
-         <title>Starlight - Dashboard</title>
+         <title>Starlight - FAQ</title>
          <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
          <link rel="icon" href="/assets/images/offical/starlight.png" type="image/x-icon">
          <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +45,8 @@
 </script>
     </head>
     <body>
-
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
         <script src="/assets/js/global.js"></script>
         <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
@@ -63,44 +64,15 @@
         </nav>
         <br>
         <br>
+        <center><div class="text">DMCA</div></center>
         <br>
-        <center><h1 class="text">Dashboard</h1></center>
-
-        <center> 
-            <a href="/assets/html/arcade.html"><button class="button">Arcade</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/assets/html/utilities.html"><button class="button">Utilities</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/assets/html/media.html"><button class="button">Media</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/assets/html/ai.html"><button class="button">AI</button></a>&nbsp;&nbsp;&nbsp;
-           </center>
-           <br>
-           <center> 
-            <a href="/assets/html/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/assets/html/credits.html"><button class="button">Credits</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/assets/html/suggestions.html"><button class="button">Suggestions</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/assets/html/reportbugs.html"><button class="button">Report Bugs</button></a>&nbsp;&nbsp;&nbsp;
-           </center>
-           <br>
-           <center> 
-            <a href="/assets/html/search.html"><button class="button">Search</button></a>&nbsp;&nbsp;&nbsp;
-            <a href=" " target="_blank"><button class="button">Infamy Studios</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://infamyy.vercel.app/" target="_blank"><button class="button">About me</button></a>&nbsp;&nbsp;&nbsp;
-           </center>
-       <br>
-       <br>
-       <br>
-       <center> 
-        <a href="/assets/html/faq.html"><button class="button">FAQ</button></a>&nbsp;&nbsp;&nbsp;
-        <a href="/assets/html/terms.html"><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
-        <a href="/assets/html/policy.html"><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
-        <a href="/assets/html/dmca.html"><button class="button">DMCA</button></a>&nbsp;&nbsp;&nbsp;
-        <a href="/assets/html/license.txt"><button class="button">License</button></a>&nbsp;&nbsp;&nbsp;
-
-       </center>
-     <br>
-     <br>
-    </body><script src="/general/js/cloak.js"></script>
+       <div id="legal">
+        <h2>If you believe that your copyrighted material has been used on this website in a way that constitutes copyright infringement, please contact us immediately at infamystudioscontact@gmail.com.<br> We take copyright violations seriously and will respond promptly to remove any infringing content in compliance with the Digital Millennium Copyright Act (DMCA).</h2>
+       </div>
+    </body>
+    <script src="/general/js/cloak.js"></script>
 </html>
-   
+    
      <script>
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
@@ -110,6 +82,6 @@
         });
         
         </script>
-        <script src="/general/js/settings.js"></script>
-        <script src="/assets/js/particlecode.js"></script>
-        <script src="/assets/js/particles.js"></script>
+                <script src="/general/js/settings.js"></script>
+                <script src="/assets/js/particlecode.js"></script>
+                <script src="/assets/js/particles.js"></script>
