--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -92,6 +92,12 @@
             <p><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
           </div></a>
           </center>
+          <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+            new Crate({
+                server: '1211576175672172636', // Infamy Studios
+                channel: '1211576176607232004' // #lounge
+            })
+        </script>
           </div>
 <script src="/assets/js/cloak.js"></script>
 <script src="/assets/uv/uv/uv.bundle.js" defer></script>
