--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -51,8 +51,9 @@
 <script>eruda.init();</script>
 <div id="particles-js"></div>
         <nav>
-            <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight</a>
+            <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight.</a>
             <div class="nav-links">
+              <a href="/assets/html/latestnews.html" title="Latest News"><img src="/assets/images/navicons/latestnews.png" id="nav-img">&nbsp;Latest News</a>
                 <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
                 <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
                 <a href="/assets/html/media.html" title="Media"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
