--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -51,12 +51,13 @@
 <script>eruda.init();</script>
 <div id="particles-js"></div>
         <nav>
-            <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight.</a>
+            <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight</a>
             <div class="nav-links">
               <a href="/assets/html/latestnews.html" title="Latest News"><img src="/assets/images/navicons/latestnews.png" id="nav-img">&nbsp;Latest News</a>
-                <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
-                <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
+                <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Games</a>
+                <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Apps</a>
                 <a href="/assets/html/media.html" title="Media"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
+                <a href="/assets/html/forum.html" title="Forum"><img src="/assets/images/navicons/forum.png" id="nav-img">&nbsp;Forum</a>
                 <a href="/assets/html/ai.html" title="AI"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
                 <a href="/assets/html/search.html" title="Search"><img src="/assets/images/navicons/search.png" id="nav-img">&nbsp;Search</a>
                 <a href="/assets/html/settings.html" title="Settings"><img src="/assets/images/navicons/settings.png" id="nav-img">&nbsp;Settings</a>
@@ -96,7 +97,7 @@
           <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
             new Crate({
                 server: '1211576175672172636', // Infamy Studios
-                channel: '1211576176607232004' // #lounge
+                channel: '1227114022130814977' // #Forums
             })
         </script>
           </div>
