--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -53,13 +53,12 @@
         <nav>
             <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight</a>
             <div class="nav-links">
-              <a href="/assets/html/latestnews.html" title="Latest News"><img src="/assets/images/navicons/latestnews.png" id="nav-img">&nbsp;Latest News</a>
                 <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Games</a>
                 <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Apps</a>
                 <a href="/assets/html/media.html" title="Media"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
                 <a href="/assets/html/forum.html" title="Forum"><img src="/assets/images/navicons/forum.png" id="nav-img">&nbsp;Forum</a>
                 <a href="/assets/html/ai.html" title="AI"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
-                <a href="/assets/html/search.html" title="Search"><img src="/assets/images/navicons/search.png" id="nav-img">&nbsp;Search</a>
+                <a href="/assets/html/news.html" title="News"><img src="/assets/images/navicons/news.png" id="nav-img">&nbsp;News</a>
                 <a href="/assets/html/settings.html" title="Settings"><img src="/assets/images/navicons/settings.png" id="nav-img">&nbsp;Settings</a>
             </div>
         </nav>
