--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -53,8 +53,8 @@
         <nav>
             <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight</a>
             <div class="nav-links">
-                <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Games</a>
-                <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Apps</a>
+                <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
+                <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
                 <a href="/assets/html/media.html" title="Media"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
                 <a href="/assets/html/forum.html" title="Forum"><img src="/assets/images/navicons/forum.png" id="nav-img">&nbsp;Forum</a>
                 <a href="/assets/html/ai.html" title="AI"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
