--- a/assets/html/news.html
+++ b/assets/html/news.html
@@ -10,12 +10,12 @@
      
      -->
      <!DOCTYPE html>
-     <html lang="en">
+     <html>
          <head>
          <meta charset="UTF-8">
          <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy, games unblocked, youtube unblocked, tiktok unblocked, youtube, tiktok, how to play unblocked games at school, games, online games, fortnite games unblocked, nowgg unblocked, nowgg alt links, nowgg, geforce now unblocked, geforcenow, geforce unblocked, geforcenow unblocked, geforce unblocked, play games, unblocked games for school, Unblocked, Games, Proxy, News, Source, Unblocking, Access, Online, Security, VPN, Browsing, Free, Play, Internet, Tools, Speed, Stream, Services, Websites, Anonymous, Privacy, Download, Connect, Network, Game List, Educational, Safe, Explore, Entertainment, Platform, User-Friendly, Experience, Content, Support, Community, Features, Compatibility, Fast, Reliable, Bypass, Filters, Restrictions, Mobile, Desktop, Gaming Hub, Reviews, Ratings, Updates, Tutorials, Guides, Forum, Discussion, Tips, Tricks, Resources, Insights, Feedback, Events, Contests, Challenges, Multiplayer, Strategy, Adventure, Simulation, Action, Casual, Puzzle, Platformer, Arcade, Retro, New Releases, Downloads, User Reviews, Popular, Trending, Favorites, Highlights, Recommendations, Profiles, Achievements, Leaderboards, Quests, Cooperative, Solo, Community Events, Playlists, Scoring, Game Development, Live Events, Streaming, Collaborations, Game Modes, Beta Testing, Special Offers, Promotions, Discounts.">
          <meta name="author" content="Enterheadlines">
-         <title>Starlight - Search</title>
+         <title>Starlight - Home</title>
          <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
          <link rel="icon" href="/assets/images/offical/starlight.png" type="image/x-icon">
          <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,81 +43,45 @@
 
   gtag('config', 'G-36EM66LHER');
 </script>
-
     </head>
     <body>
-
-        <script src="/assets/js/global.js"></script>
-        <script src="/assets/js/eruda.js"></script>
-        <script>eruda.init();</script>
-        <div id="particles-js"></div>
+   
+<script src="/assets/js/global.js"></script>
+<script src="/assets/js/eruda.js"></script>
+<script>eruda.init();</script>
+<div id="particles-js"></div>
         <nav>
-            <a href="/assets/html/index.html" class="left-link">Starlight</a>
+            <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight</a>
             <div class="nav-links">
-                <a href="/assets/html/arcade.html"><img src="/assets/images/navicons/arcade.png" height="12px" width="12px">&nbsp;Arcade</a>
-                <a href="/assets/html/utilities.html"><img src="/assets/images/navicons/apps.png" height="12px" width="12px">&nbsp;Utilities</a>
-                <a href="/assets/html/media.html"><img src="/assets/images/navicons/movies.png" height="12px" width="12px">&nbsp;Media</a>
-                <a href="/assets/html/ai.html"><img src="/assets/images/navicons/ai.png" height="12px" width="12px">&nbsp;AI</a>
-                <a href="/assets/html/search.html"><img src="/assets/images/navicons/search.png" height="12px" width="12px">&nbsp;Search</a>
-                <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
+                <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
+                <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
+                <a href="/assets/html/media.html" title="Media"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
+                <a href="/assets/html/forum.html" title="Forum"><img src="/assets/images/navicons/forum.png" id="nav-img">&nbsp;Forum</a>
+                <a href="/assets/html/ai.html" title="AI"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
+                <a href="/assets/html/news.html" title="News"><img src="/assets/images/navicons/news.png" id="nav-img">&nbsp;News</a>
+                <a href="/assets/html/settings.html" title="Settings"><img src="/assets/images/navicons/settings.png" id="nav-img">&nbsp;Settings</a>
             </div>
         </nav>
-     <div id="mainmenu">
-        <center><div class="text">Starlight's Search/Proxy</div></center>
-        <br>
-        <center>
-            <form id="uv-form">
-              <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
-              <input id="uv-address" type="text" placeholder="Search the web with Starlight" class="form__input"/>
-            </form>
-            <div class="desc left-margin">
-              <p id="uv-error"></p>
-              <pre id="uv-error-code"></pre>
-            </div>
+        <div id="mainmenu">
+
+       </div>
           </center>
-<br>
-    <div class="quicklink-container" id="quicklink-container">
-       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-wuw%2Cgmoelg.aoo%2F%3Dgus%5Drf%3Dqsn">
-          <img src="/assets/images/thumbnails/googlepng.png" alt="Google">
-          <p>Google</p>
-       </a>
-
-       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-">
-          <img src="/assets/images/thumbnails/youtube.jpeg" alt="Now.gg">
-          <p>Youtube</p>
-       </a>
-
-       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-wuw%2Ctkkvoi.aoo%2Fgxrlmrg">
-          <img src="/assets/images/thumbnails/tiktok.png" alt="Tiktok">
-          <p>Tiktok</p>
-       </a>
-
-       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-nmw%2Cge%2F">
-        <img src="/assets/images/thumbnails/nowgg.png" alt="Tiktok">
-        <p>Now.GG</p>
-     </a>
-       </div>
-       </div>
-    </body>
+          <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+            new Crate({
+                server: '1211576175672172636', // Infamy Studios
+                channel: '1227114022130814977' // #Forums
+            })
+        </script>
+          </div>
 <script src="/assets/js/cloak.js"></script>
 <script src="/assets/uv/uv/uv.bundle.js" defer></script>
 <script src="/assets/uv/uv/uv.config.js" defer></script>
 <script src="/assets/uv/register-sw.js" defer></script>
 <script src="/assets/uv/search.js" defer></script>
 <script src="/assets/uv/index.js" defer></script>
-<script src="/assers/uv/error.js" defer></script>
+<script src="/assets/uv/error.js" defer></script>
+    </body>
 </html>
-  
- 
-     <script>
-        let deferredPrompt;
-        window.addEventListener('beforeinstallprompt', (e) => {
-          e.preventDefault();
-          deferredPrompt = e;
-          // Show your custom install button
-        });
-        
-        </script>
-        <script src="/general/js/browser.js"></script>
-        <script src="/assets/js/particlecode.js"></script>
-        <script src="/assets/js/particles.js"></script>
+                <script src="/general/js/settings.js"></script>
+                      <script src="/assets/js/particlecode.js"></script>
+                      <script src="/assets/js/particles.js"></script>
