--- a/assets/html/forum.html
+++ b/assets/html/forum.html
@@ -15,7 +15,7 @@
          <meta charset="UTF-8">
          <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy, games unblocked, youtube unblocked, tiktok unblocked, youtube, tiktok, how to play unblocked games at school, games, online games, fortnite games unblocked, nowgg unblocked, nowgg alt links, nowgg, geforce now unblocked, geforcenow, geforce unblocked, geforcenow unblocked, geforce unblocked, play games, unblocked games for school, Unblocked, Games, Proxy, News, Source, Unblocking, Access, Online, Security, VPN, Browsing, Free, Play, Internet, Tools, Speed, Stream, Services, Websites, Anonymous, Privacy, Download, Connect, Network, Game List, Educational, Safe, Explore, Entertainment, Platform, User-Friendly, Experience, Content, Support, Community, Features, Compatibility, Fast, Reliable, Bypass, Filters, Restrictions, Mobile, Desktop, Gaming Hub, Reviews, Ratings, Updates, Tutorials, Guides, Forum, Discussion, Tips, Tricks, Resources, Insights, Feedback, Events, Contests, Challenges, Multiplayer, Strategy, Adventure, Simulation, Action, Casual, Puzzle, Platformer, Arcade, Retro, New Releases, Downloads, User Reviews, Popular, Trending, Favorites, Highlights, Recommendations, Profiles, Achievements, Leaderboards, Quests, Cooperative, Solo, Community Events, Playlists, Scoring, Game Development, Live Events, Streaming, Collaborations, Game Modes, Beta Testing, Special Offers, Promotions, Discounts.">
          <meta name="author" content="Enterheadlines">
-         <title>Starlight - News</title>
+         <title>Starlight - Forum</title>
          <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
          <link rel="icon" href="/assets/images/offical/starlight.png" type="image/x-icon">
          <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,23 +64,13 @@
         </nav>
         <div id="mainmenu">
             <center><div class="text">Starlight's News</div></center>
-            <div class="news-section">
-                <div class="news-card">
-                    <h3>New Update: Popular Game X Adds Multiplayer Mode!</h3>
-                    <p>Game X just received a major update, bringing a highly requested multiplayer mode to the game. Players can now team up with friends to take on challenges together...</p>
-                    <a href="#" class="read-more">Read More &raquo;</a>
-                </div>
-                <div class="news-card">
-                    <h3>Unblocked Games Are Taking Over Schools!</h3>
-                    <p>Unblocked games are becoming increasingly popular among students, offering a fun distraction from the classroom. But how are schools handling it? Let’s dive into the trend...</p>
-                    <a href="#" class="read-more">Read More &raquo;</a>
-                </div>
-                <div class="news-card">
-                    <h3>Game Y: A Must-Play For Puzzle Lovers</h3>
-                    <p>If you're a fan of challenging puzzles and brain-teasers, Game Y is the latest title you need to check out. With creative levels and a compelling story...</p>
-                    <a href="#" class="read-more">Read More &raquo;</a>
-                </div>
-            </div>
+            <widgetbot
+            server="1211576175672172636"
+            channel="1227114022130814977"
+            width="1200"
+            height="600"
+        ></widgetbot>
+        <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
        </div>
           </center>
           <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
