--- a/assets/html/news.html
+++ b/assets/html/news.html
@@ -50,24 +50,23 @@
 <script src="/assets/js/eruda.js"></script>
 <script>eruda.init();</script>
 <div id="particles-js"></div>
-        <nav>
-            <a href="/assets/html/index.html" class="left-link" title="Starlight">Starlight</a>
-            <div class="nav-links">
-                <a href="/assets/html/arcade.html" title="Arcade"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
-                <a href="/assets/html/utilities.html" title="Utilities"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
-                <a href="/assets/html/media.html" title="Media"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
-                <a href="/assets/html/forum.html" title="Forum"><img src="/assets/images/navicons/forum.png" id="nav-img">&nbsp;Forum</a>
-                <a href="/assets/html/ai.html" title="AI"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
-                <a href="/assets/html/news.html" title="News"><img src="/assets/images/navicons/news.png" id="nav-img">&nbsp;News</a>
-                <a href="/assets/html/settings.html" title="Settings"><img src="/assets/images/navicons/settings.png" id="nav-img">&nbsp;Settings</a>
-            </div>
-        </nav>
+<nav>
+    <a href="/assets/html/index.html" class="left-link">Starlight</a>
+    <div class="nav-links">
+        <a href="/assets/html/arcade.html"><img src="/assets/images/navicons/arcade.png" height="12px" width="12px">&nbsp;Arcade</a>
+        <a href="/assets/html/utilities.html"><img src="/assets/images/navicons/apps.png" height="12px" width="12px">&nbsp;Utilities</a>
+        <a href="/assets/html/media.html"><img src="/assets/images/navicons/movies.png" height="12px" width="12px">&nbsp;Media</a>
+        <a href="/assets/html/ai.html"><img src="/assets/images/navicons/ai.png" height="12px" width="12px">&nbsp;AI</a>
+        <a href="/assets/html/search.html"><img src="/assets/images/navicons/search.png" height="12px" width="12px">&nbsp;Search</a>
+        <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
+    </div>
+</nav>
         <div id="mainmenu">
             <center><div class="text">Starlight's News</div></center>
             <div class="news-section">
                 <div class="news-card">
-                    <h3>New Update: Popular Game X Adds Multiplayer Mode!</h3>
-                    <p>Game X just received a major update, bringing a highly requested multiplayer mode to the game. Players can now team up with friends to take on challenges together...</p>
+                    <h3>Apex Network is finally releasing its proxy!</h3>
+                    <p>Apex network has delayed its website release for so long but finally it will release soon</p>
                     <a href="#" class="read-more">Read More &raquo;</a>
                 </div>
                 <div class="news-card">
@@ -83,7 +82,7 @@
             </div>
        </div>
           </center>
-          <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+          <script src='/assets/js/crate.js' async defer>
             new Crate({
                 server: '1211576175672172636', // Infamy Studios
                 channel: '1227114022130814977' // #Forums
