i watched squid gay

--- a/assets/html/forum.html
+++ b/assets/html/forum.html
@@ -62,7 +62,7 @@
     </div>
 </nav>
         <div id="mainmenu">
-            <center><div class="text">Starlight's News</div></center><br>
+            <center><div class="text">Starlight's Forum</div></center><br>
             <center>
             <widgetbot
             server="1211576175672172636"
