--- a/assets/html/news.html
+++ b/assets/html/news.html
@@ -64,6 +64,7 @@
         <div id="mainmenu">
             <center><div class="text">Starlight's News</div></center>
             <div class="news-section">
+                <center>
                 <div class="news-card">
                     <h3>Apex Network is finally releasing its proxy!</h3>
                     <p>Apex network has delayed its website release for so long but finally it will release soon</p>
@@ -79,6 +80,7 @@
                     <p>If you're a fan of challenging puzzles and brain-teasers, Game Y is the latest title you need to check out. With creative levels and a compelling story...</p>
                     <a href="#" class="read-more">Read More &raquo;</a>
                 </div>
+                </center>
             </div>
        </div>
           </center>
