--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -158,3 +158,4 @@ setInterval(changeSplashText, 5000);
              </script>
                       <script src="/assets/js/particlecode.js"></script>
                       <script src="/assets/js/particles.js"></script>
+                      <script src="/assets/js/alert.js"></script>
