--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -142,6 +142,18 @@
     '7 months of coding experience leads to this',
     'i secretly think that 55gms solos every proxy site',
     'whenever i scrape games from other gaming sites i feel like 3kh0',
+    'havent updated this since 2024',
+    'in need of frontend developers',
+    'alice in borderland is a masterpiece',
+    'squid game is ass',
+    'i hate dexter YOU is better',
+    'life can end at any moment so have fun when your at events',
+    'i hate british people',
+    'looksmaxxing is fake its just losing weight',
+    'garten of banban lore is a masterpiece(joke)',
+    'murakami nijiro',
+    'casey',
+    'being depressed wastes your time so just have fun',
 ];
 
 // Function to change text
