--- a/assets/html/dashboard.html
+++ b/assets/html/dashboard.html
@@ -109,7 +109,7 @@
           // Show your custom install button
         });
         
-        </script>
-        <script src="/general/js/settings.js"></script>
+        </script>                <script src="/assets/js/settings.js"></script>
+
         <script src="/assets/js/particlecode.js"></script>
         <script src="/assets/js/particles.js"></script>
