--- a/assets/html/dmca.html
+++ b/assets/html/dmca.html
@@ -82,6 +82,7 @@
         });
         
         </script>
-                <script src="/general/js/settings.js"></script>
+                                <script src="/assets/js/settings.js"></script>
+
                 <script src="/assets/js/particlecode.js"></script>
                 <script src="/assets/js/particles.js"></script>
