--- a/assets/html/forum.html
+++ b/assets/html/forum.html
@@ -92,6 +92,7 @@
 <script src="/assets/uv/error.js" defer></script>
     </body>
 </html>
-                <script src="/general/js/settings.js"></script>
+<script src="/assets/js/settings.js"></script>
+
                       <script src="/assets/js/particlecode.js"></script>
                       <script src="/assets/js/particles.js"></script>
