--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -118,7 +118,7 @@
 <script src="/assets/uv/error.js" defer></script>
     </body>
 </html>
-                <script src="/general/js/settings.js"></script>
+                <script src="/assets/js/settings.js"></script>
              <script>
               let splashtext = [
     'Made by Infamy/enterheadlines',
