--- a/assets/html/media.html
+++ b/assets/html/media.html
@@ -70,15 +70,15 @@
     <div class="gamesh11">
         <div class="gamesh111">
         <h1 class="textt">Movies</h1>
-        <p class="descrip">Relive the good times. Many old flash games are here. Dive into an old collection of games such as Raft Wars, The World's Hardest Game, The Impossible Quiz, And learn to fly! Play them all before Flash ended.</p>
+        <p class="descrip">Dive into this section to search for and discover a selection of new movies as well as your all-time favorites!
+        </p>
         <a href="/assets/categories/tv-show/movies.html">
         <button class="browse-games">Browse Movies</button></a>
         </div>
         <br>
         <div class="gamesh111">
         <h1 class="textt">TV Show</h1>
-        <p class="descrip">
-            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
+        <p class="descrip">Tune in to this section to explore and discover a variety of new TV shows along with your classic favorites!</p>
         <a href="/assets/categories/tv-show/tv-show.html">
         <button class="browse-games">Browse TV Shows</button></a>
         </div>
@@ -86,7 +86,8 @@
         </div>
      
     </body>
-</html><script src="/general/js/cloak.js"></script>
+</html>                <script src="/assets/js/settings.js"></script>
+
    
      <script>
         let deferredPrompt;
