--- a/assets/html/policy.html
+++ b/assets/html/policy.html
@@ -91,7 +91,7 @@
             If you have any questions or concerns about this Privacy Policy, please contact us through our website.</h3>
             </div>
             <div>
-            <h2>Last updated on Monday, October 1, Tuesday</h2>
+            <h2>Last updated on Monday, October 1st, 2024</h2>
             </div>
     </body><script src="/assets/js/cloak.js"></script>
 </html>
