--- a/assets/html/search.html
+++ b/assets/html/search.html
@@ -69,15 +69,14 @@
     <div class="gamesh11">
         <div class="gamesh111">
         <h1 class="textt">Proxy</h1>
-        <p class="descrip">Relive the good times. Many old flash games are here. Dive into an old collection of games such as Raft Wars, The World's Hardest Game, The Impossible Quiz, And learn to fly! Play them all before Flash ended.</p>
+        <p class="descrip">Utilize our Ultraviolet Proxy to seamlessly search the web with enhanced privacy and security!</p>
         <a href="/assets/categories/search/proxy.html">
         <button class="browse-games">Browse Proxy</button></a>
         </div>
         <br>
         <div class="gamesh111">
         <h1 class="textt">Search Engine</h1>
-        <p class="descrip">
-            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
+        <p class="descrip">Utilize our Search Engine to seamlessly browse the web with enhanced privacy and security! </p>
         <a href="/assets/categories/search/searchengine.html">
         <button class="browse-games">Browse Search Engine</button></a>
         </div>
