--- a/assets/html/utilities.html
+++ b/assets/html/utilities.html
@@ -69,37 +69,37 @@
 <div class="gamesh11">
     <div class="gamesh111">
     <h1 class="textt">All Apps</h1>
-    <p class="descrip">Discover a diverse collection of fan-favorite games like Retro Bowl, PolyTrack, Monkey Mart, and Drive Mad! Whether you love action-packed adventures, fun simulators, or laid-back gaming experiences, this section has it all!</p>
+    <p class="descrip">Explore a variety of new and useful apps in this category! Whether you're looking for the latest or useful apps, discover exciting options to suit every preference.</p>
     <a href="/assets/categories/utilities/all.html">
     <button class="browse-games"> Browse all Utilities </button></a>
     </div>
     <br>
     <div class="gamesh111">
     <h1 class="textt">Shortcuts</h1>
-    <p class="descrip">Relive the good times. Many old flash games are here. Dive into an old collection of games such as Raft Wars, The World's Hardest Game, The Impossible Quiz, And learn to fly! Play them all before Flash ended.</p>
+    <p class="descrip">Explore a variety of new shortcuts in this category! Whether you're looking for the latest apps/shortcuts.(register the proxy before using this category)</p>
     <a href="/assets/categories/utilities/shortcuts.html">
     <button class="browse-games">Browse shortcuts</button></a>
     </div>
     <br>
     <div class="gamesh111">
     <h1 class="textt">Infstore</h1>
-    <p class="descrip">
-        Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
+    <p class="descrip">Infstore is an app store that provides easy access to a wide range of unblocked apps for seamless downloads and use.</p>
     <a href="/assets/categories/infstore/infstore.html">
     <button class="browse-games">Browse Infstore</button></a>
     </div>
     <br>
         <div class="gamesh111">
             <h1 class="textt">Music</h1>
-            <p class="descrip">
-                Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
+            <p class="descrip">Explore our collection of New Music Releases and Original Starlight Music.
+            </p>
             <a href="/assets/categories/utilities/music.html">
             <button class="browse-games">Browse Music</button></a>
             </div>
             <br>
             <div class="gamesh111">
                 <h1 class="textt">Videos</h1>
-                <p class="descrip">Discover a diverse collection of fan-favorite games like Retro Bowl, PolyTrack, Monkey Mart, and Drive Mad! Whether you love action-packed adventures, fun simulators, or laid-back gaming experiences, this section has it all!</p>
+                <p class="descrip">Explore our collection of New videos and Starlight made videos.
+                </p>
                 <a href="/assets/categories/utilities/videos.html">
                 <button class="browse-games">Browse all Videos </button></a>
                 </div>
