--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -94,6 +94,7 @@
         });
         
         </script>
-                <script src="/general/js/settings.js"></script>
+                              <script src="/assets/js/settings.js"></script>
+
                 <script src="/assets/js/particlecode.js"></script>
                 <script src="/assets/js/particles.js"></script>
