--- a/assets/html/partnership.html
+++ b/assets/html/partnership.html
@@ -103,6 +103,6 @@
         });
         
         </script>      
-          <script src="/general/js/settings.js"></script>
-          <script src="/assets/js/particlecode.js"></script>
+                <script src="/assets/js/settings.js"></script>
+                <script src="/assets/js/particlecode.js"></script>
           <script src="/assets/js/particles.js"></script>
