--- a/assets/html/arcade.html
+++ b/assets/html/arcade.html
@@ -82,6 +82,14 @@
         </div>
         <br>
         <div class="gamesh111">
+            
+            <h1 class="textt">ROMs</h1>
+            <p class="descrip">Discover our curated collection of ROMs, featuring a diverse array of high-quality games that include both beloved classics and hidden gems, all designed to enhance your gaming experience.</p>
+            <a href="/assets/categories/arcade/starlightoriginal.html">
+            <button class="browse-games">Browse Starlight's Games</button></a>
+            </div>
+            <br>
+        <div class="gamesh111">
         <h1 class="textt">Infstore</h1>
         <p class="descrip">Infstore is an app store that provides easy access to a wide range of unblocked apps for seamless downloads and use.</p>
         <a href="/assets/categories/">
