--- a/assets/html/dashboard.html
+++ b/assets/html/dashboard.html
@@ -84,7 +84,7 @@
             <a href="/assets/html/search.html"><button class="button">Search</button></a>&nbsp;&nbsp;&nbsp;
             <a href=" " target="_blank"><button class="button">Infamy Studios</button></a>&nbsp;&nbsp;&nbsp;
             <a href="https://infamyy.vercel.app/" target="_blank"><button class="button">About me</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/assets/html/license.txt"><button class="button">License</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/LICENSE"><button class="button">License</button></a>&nbsp;&nbsp;&nbsp;
            </center>
        <br>
        <br>
