--- a/assets/html/settings.html
+++ b/assets/html/settings.html
@@ -81,6 +81,16 @@
      <center><a id="openscriptButton"><button id="type">Open about:blank in new window</button></a></center>
              </div>
             </div>
+            <div class="settingsColumn">
+                <div class="settings-container">
+                    <center><h1>Save Data/Load Data</h1></center>
+                     <!-- Buttons for saving and loading -->
+  <button id="saveStorage">Download Local Storage</button>
+  <input type="file" id="loadStorage" accept=".json">
+  <label for="loadStorage" style="cursor: pointer;">Upload JSON to Load Local Storage</label>
+
+                </div>
+            </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
                 <p><strong>Site Name:</strong>Starlight</p>
@@ -105,3 +115,4 @@
         <script src="/assets/js/cloak.js"></script>
         <script src="/assets/js/particlecode.js"></script>
         <script src="/assets/js/particles.js"></script>
+        <script src="/assets/js/datasave.js"></script>
