--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -49,7 +49,7 @@
 <div class="overlay" id="alertOverlay">
   <div class="alert-box">
       <h2>Maintenance Alert</h2>
-      <p>Attention: This site may have security issues. Please use it at your own risk.</p>
+      <p>Attention: This site may have bugs and website breaking issues. Please use it at your own risk.</p>
       <div class="button-container">
           <button class="proceed" onclick="dismissAlert()">Proceed</button>
           <button class="do-not-proceed" onclick="dismissAlert()">Do Not Proceed</button>
@@ -72,7 +72,7 @@
   </div>
 </nav>
         <div id="mainmenu">
-        <center><div class="text">Welcome to Starlight</div></center>
+        <center><div class="text">Welcome to Starlight V2 alpha</div></center>
         <div id="splash">Loading...</div>
         <br>
         <center>
@@ -102,12 +102,7 @@
             <p><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
           </div></a>
           </center>
-          <script src='/assets/js/crate.js' async defer>
-            new Crate({
-                server: '1211576175672172636', // Infamy Studios
-                channel: '1227114022130814977' // #Forums
-            })
-        </script>
+      
           </div>
 <script src="/assets/js/cloak.js"></script>
 <script src="/assets/uv/uv/uv.bundle.js" defer></script>
