--- a/assets/misc/apps/equinox.html
+++ b/assets/misc/apps/equinox.html
@@ -69,7 +69,7 @@
   
   <div class="container-iframe">
     <div class="iframe-container">
-        <iframe id="iframe" name="iframe" src="https://coolequinoxstuff.vercel.app"></iframe>
+        <iframe id="iframe" name="iframe" src="https://wrnd.site"></iframe>
     </div>
 
     <div class="controls">
