--- a/assets/html/arcade.html
+++ b/assets/html/arcade.html
@@ -85,8 +85,8 @@
             
             <h1 class="textt">ROMs</h1>
             <p class="descrip">Discover our curated collection of ROMs, featuring a diverse array of high-quality games that include both beloved classics and hidden gems, all designed to enhance your gaming experience.</p>
-            <a href="/assets/categories/arcade/starlightoriginal.html">
-            <button class="browse-games">Browse Starlight's Games</button></a>
+            <a href="/assets/categories/arcade/roms.html">
+            <button class="browse-games">Browse Starlight's ROMs</button></a>
             </div>
             <br>
         <div class="gamesh111">
