--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -62,7 +62,6 @@
 <div id="particles-js"></div>
 <div id="navbar-container"></div>
 <script src="/assets/js/navbar.js"></script>
-  <a href="/assets/html/index.html" class="left-link">Starlight</a>
         <div id="mainmenu">
         <center><div class="text">Welcome to Starlight V2 alpha</div></center>
         <div id="splash">Loading...</div>
@@ -141,6 +140,14 @@
     'murakami nijiro',
     'casey',
     'being depressed wastes your time so just have fun',
+    'how are you guys',
+    'one developer 7 services',
+    'this sites development is so slow that gta 6 is faster than this',
+    'this quotes are so ass that i laugh at it',
+    'crazy how most unblocked websites have gotten betten than 2023',
+    'infamy studios was created on 2024 march',
+    'conor mcgregor is gone (sad face)',
+
 ];
 
 // Function to change text
