--- a/assets/html/arcade.html
+++ b/assets/html/arcade.html
@@ -95,7 +95,7 @@
             <h1 class="textt">Infstore</h1>
             <p class="descrip">Infstore is an app store that provides easy access to a wide range of unblocked apps for
                 seamless downloads and use.</p>
-            <a href="/assets/categories/">
+            <a href="/library/infstore/infstore.html">
                 <button class="browse-games">Browse Infstore</button></a>
         </div>
         <br>
