--- a/assets/html/settings.html
+++ b/assets/html/settings.html
@@ -97,6 +97,7 @@
 
             </div>
         </div>
+        <br>
         <div class="settingsColumn" id="siteInfo">
             <h1>Site Info</h1>
             <p><strong>Site Name:</strong>Starlight</p>
@@ -105,7 +106,22 @@
             <p><strong>Version:</strong> 1.0.0</p>
         </div>
     </div>
-
+    <div class="settingsColumn">
+        <div class="settings-container">
+            <center>
+                <h1>Change background theme</h1>
+            </center>
+            <select id="gradientSelector">
+                <option value="linear-gradient(to right, #ff7e5f, #feb47b)">Sunset</option>
+                <option value="linear-gradient(to right, #6a11cb, #2575fc)">Purple Blue</option>
+                <option value="linear-gradient(to right, #ff6a6a, #f7b733)">Coral</option>
+                <option value="linear-gradient(to right, #00c6ff, #0072ff)">Sky</option>
+            </select>
+            <button id="resetButton">Reset to Default</button>
+        
+        </div>
+    </div>
+</div>
 </body>
 <script src="/assets/js/cloak.js"></script>
 
