--- a/assets/html/settings.html
+++ b/assets/html/settings.html
@@ -97,7 +97,7 @@
 
             </div>
         </div>
-        <br>
+<div class="settingsColumn"
         <div class="settingsColumn" id="siteInfo">
             <h1>Site Info</h1>
             <p><strong>Site Name:</strong>Starlight</p>
@@ -106,6 +106,7 @@
             <p><strong>Version:</strong> 1.0.0</p>
         </div>
     </div>
+</div>
     <div class="settingsColumn">
         <div class="settings-container">
             <center>
